landscape project content

--- a/landscape.html
+++ b/landscape.html
@@ -61,8 +61,12 @@
                     <img src="assets/industries_internal/landscape/landscape/1_podium_2.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Recreational Ground at Suraksha Smart City</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-2024</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 2721 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
                 </div>
             </div>
         </div>
@@ -72,9 +76,14 @@
                 <div class="project_card_front">
                     <img src="assets/industries_internal/landscape/landscape/2_podium_3.jpeg" class="project_image" alt="">
                 </div>
+
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Podium at Suraksha Smart City, Sector-4B</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 220 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
                 </div>
             </div>
         </div>
@@ -84,9 +93,15 @@
                 <div class="project_card_front">
                     <img src="assets/industries_internal/landscape/landscape/3_podium_4.jpeg" class="project_image" alt="">
                 </div>
+                
+
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Podium at Suraksha Smart City, Sector-4B</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 500 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
                 </div>
             </div>
         </div>
@@ -97,8 +112,12 @@
                     <img src="assets/industries_internal/landscape/landscape/4_rg_36a.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">EKATMA Village</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Architectural design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Truly Creative Developers</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2021-2024</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 48,000 sq.ft. approx</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Andheri (W)</p>
                 </div>
             </div>
         </div>
@@ -109,8 +128,12 @@
                     <img src="assets/industries_internal/landscape/landscape/5_podium_om_nagar.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Podium at Sethi Palacio</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Sethi Realtors</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 1064 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Vasai (W)</p>
                 </div>
             </div>
         </div>
@@ -121,38 +144,18 @@
                     <img src="assets/industries_internal/landscape/landscape/6_rg_41.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Recreational Ground at Suraksha Smart City</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 6706 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
                 </div>
             </div>
         </div>
     </div>
-    <!-- project 2 cards -->
+    <!-- project 2 cards ------------------------------------------------------------>
     <div class="container project_cards_wrap" data-name="project2">
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/landscape/neighbourhood_planning/1_kambhare.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/landscape/neighbourhood_planning/2_urban_park.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
@@ -160,8 +163,53 @@
                     <img src="assets/industries_internal/landscape/neighbourhood_planning/3_ssc_site_plan.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Suraksha Smart City site plan</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> CASL Pvt. Ltd.</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 300+ acres</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
+                </div>
+            </div>
+        </div>
+        
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/landscape/neighbourhood_planning/2_urban_park.jpeg" class="project_image" alt="">
+                </div>
+
+                <div class="project_card_back">
+                    <p class="project_name">Urban Park at Suraksha Smart City</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Truly Creative Developers</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 4 acres</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Vasai (E)</p>
+                </div>
+            </div>
+        </div>
+        <!-- project card -->
+        <div class="project_card">
+            <div class="project_card_inside">
+                <div class="project_card_front">
+                    <img src="assets/industries_internal/landscape/neighbourhood_planning/1_kambhare.jpeg" class="project_image" alt="">
+                </div>
+                Project name: 
+Scope:  Landscape designing 
+Client: 
+Year: Ongoing
+Area: 3.5 acres
+Location: 
+
+                <div class="project_card_back">
+                    <p class="project_name">Agro Tourism at Wada</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr. Boir</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 3.5 acres</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Wada</p>
                 </div>
             </div>
         </div>
@@ -172,8 +220,12 @@
                     <img src="assets/industries_internal/landscape/neighbourhood_planning/4_nursery.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Nursery at Mumbai-Goa highway</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr. Nishi</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 1216 sq.m</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Panvel</p>
                 </div>
             </div>
         </div>
@@ -184,23 +236,12 @@
                     <img src="assets/industries_internal/landscape/neighbourhood_planning/5_kudus.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- project 3 cards -->
-    <div class="container project_cards_wrap" data-name="project3">
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/interiors/high_enad_residential/1_bunglow_at_goa.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Old Age home for Rajput Foundation</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Rajput Foundation</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 5 acres</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Kudus</p>
                 </div>
             </div>
         </div>
@@ -208,35 +249,16 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/interiors/high_enad_residential/2_bunglow_at_alibaug.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/landscape/neighbourhood_planning/6_paigaon.jpeg" class="project_image" alt="">
                 </div>
+
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/interiors/high_enad_residential/3_bunglow_at_wada.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
-                </div>
-            </div>
-        </div>
-        <!-- project card -->
-        <div class="project_card">
-            <div class="project_card_inside">
-                <div class="project_card_front">
-                    <img src="assets/industries_internal/interiors/high_enad_residential/4_bunglow_at_wada.jpeg" class="project_image" alt="">
-                </div>
-                <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Gated Community</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Rajput Foundation</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 5 acres</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Paigaon</p>
                 </div>
             </div>
         </div>
