--- a/architecture.html
+++ b/architecture.html
@@ -62,7 +62,7 @@
                     <img src="assets/industries_internal/architecture/high_rise/6_tep_village.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">EKATMA Village</p>
+                    <p class="project_name">EKATMA</p>
                     <p class="project_desc"><span class="project_detail">Scope:</span> Architectural design</p>
                     <p class="project_desc"><span class="project_detail">Client:</span> Truly Creative Developers</p>
                     <p class="project_desc"><span class="project_detail">Year:</span> 2021-2024</p>
