residential, commercial content

--- a/interiors.html
+++ b/interiors.html
@@ -59,14 +59,19 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/interiors/high_enad_residential/1_bunglow_at_goa.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/high_enad_residential/1_bunglow_at_wada.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for a 4BHK bungalow</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr. Vaibhav Thirani</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2023-Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 3940 sq.ft</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Ambivali</p>
                 </div>
             </div>
         </div>
+        
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
@@ -74,11 +79,16 @@
                     <img src="assets/industries_internal/interiors/high_enad_residential/2_bunglow_at_alibaug.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for 5BHK bungalow</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Private</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2022-2023</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 9000 sq.ft</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Borli, Alibaug</p>
                 </div>
             </div>
         </div>
+        
         <!-- project card -->
         <div class="project_card">
             <div class="project_card_inside">
@@ -86,8 +96,12 @@
                     <img src="assets/industries_internal/interiors/high_enad_residential/3_bunglow_at_wada.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for 3BHK bungalow</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Adv. Chopde</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> 2021-2022</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 3000 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Goa</p>
                 </div>
             </div>
         </div>
@@ -95,11 +109,15 @@
         <div class="project_card">
             <div class="project_card_inside">
                 <div class="project_card_front">
-                    <img src="assets/industries_internal/interiors/high_enad_residential/4_bunglow_at_wada.jpeg" class="project_image" alt="">
+                    <img src="assets/industries_internal/interiors/high_enad_residential/4_bunglow_at_goa.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Agro Tourism at Wada</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Landscape design</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr. Boir</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 3.5 acres</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Wada</p>
                 </div>
             </div>
         </div>
@@ -113,8 +131,12 @@
                     <img src="assets/industries_internal/interiors/residential/1_1bhk_pune.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for a 2BHK apartment</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr. Anand Tendulkar</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 540 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Pune</p>
                 </div>
             </div>
         </div>
@@ -125,8 +147,12 @@
                     <img src="assets/industries_internal/interiors/residential/2_1bhk_goregaon.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for a 1BHK apartment</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Turn-key</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mrs. Leena Shah</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 355 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Goregaon (W)</p>
                 </div>
             </div>
         </div>
@@ -137,8 +163,12 @@
                     <img src="assets/industries_internal/interiors/residential/3_2bhk_kandivali.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for a 2BHK apartment</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Turn-key</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr. Jatin Parmar</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 575 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Kandivali (W)</p>
                 </div>
             </div>
         </div>
@@ -149,8 +179,13 @@
                     <img src="assets/industries_internal/interiors/residential/4_3bhk_thane.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for 4BHK apartment in Thane</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr. Sameer Kamat</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 1300 sq.ft.</p>
+                    <!-- <p class="project_desc"><span class="project_detail">Location:</span> Thane</p> -->
+                    <p class="project_desc collab_partner"><span class="project_detail">Collab-partner:</span> Design 3.14</p>
                 </div>
             </div>
         </div>
@@ -161,8 +196,12 @@
                     <img src="assets/industries_internal/interiors/residential/5_building_lobby.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors of Lobby for residential building</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Turn-key</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Toral Raj Developers</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 420 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Borivali (E)</p>
                 </div>
             </div>
         </div>
@@ -173,8 +212,12 @@
                     <img src="assets/industries_internal/interiors/residential/6_ekatma_lobby.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors of Lobby for residential building</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Truly Creative Developers</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Adv. Chopde</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 540 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Andheri (W)</p>
                 </div>
             </div>
         </div>
@@ -188,8 +231,12 @@
                     <img src="assets/industries_internal/interiors/commercial/1_ca_office.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for CA Office</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Mr. Mahesh Deshpande</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 360 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Kandivali (W)</p>
                 </div>
             </div>
         </div>
@@ -199,9 +246,14 @@
                 <div class="project_card_front">
                     <img src="assets/industries_internal/interiors/commercial/2_vks.jpeg" class="project_image" alt="">
                 </div>
+
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for Vivek Sewa Kendra</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Vivek Sewa Kendra</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Completed</p>
+                    <!-- <p class="project_desc"><span class="project_detail">Area:</span></p> -->
+                    <!-- <p class="project_desc"><span class="project_detail">Location:</span> Borivali (E)</p> -->
                 </div>
             </div>
         </div>
@@ -211,9 +263,14 @@
                 <div class="project_card_front">
                     <img src="assets/industries_internal/interiors/commercial/3_clothing_store.jpeg" class="project_image" alt="">
                 </div>
+
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for clothing store</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Vaishali Clothing Store</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 1830 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Karnataka</p>
                 </div>
             </div>
         </div>
@@ -224,8 +281,12 @@
                     <img src="assets/industries_internal/interiors/commercial/4_school_lobby.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Design proposal for school lobby</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Sparkle School</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Ongoing</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 1750 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Nalasopara (E)</p>
                 </div>
             </div>
         </div>
@@ -236,8 +297,12 @@
                     <img src="assets/industries_internal/interiors/commercial/5_office_interiors.jpeg" class="project_image" alt="">
                 </div>
                 <div class="project_card_back">
-                    <p class="project_name">Project Name</p>
-                    <p class="project_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit hic eaque iusto quo laboriosam ducimus.</p>
+                    <p class="project_name">Interiors for an office</p>
+                    <p class="project_desc"><span class="project_detail">Scope:</span> Designing consultants</p>
+                    <p class="project_desc"><span class="project_detail">Client:</span> Shri Guru Rajendra Vidhyadham Sarod</p>
+                    <p class="project_desc"><span class="project_detail">Year:</span> Completed</p>
+                    <p class="project_desc"><span class="project_detail">Area:</span> 450 sq.ft.</p>
+                    <p class="project_desc"><span class="project_detail">Location:</span> Palitana, Gujarat</p>
                 </div>
             </div>
         </div>
